--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	 version="3.1">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -13,7 +9,6 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/program/*</url-pattern>
@@ -23,18 +18,16 @@
             3
         </session-timeout>
     </session-config>
-    
-    <context-param>
-        <param-name>viewId</param-name>
-        <param-value>/program/index.xhtml</param-value>
-    </context-param>
-    
     <filter>
-    <filter-name>ProgramFilter</filter-name>
-    <filter-class>segurl.filter.SegurlURLInjector</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>ProgramFilter</filter-name>
-    <url-pattern>/program/*</url-pattern>
-  </filter-mapping>
+        <filter-name>ProgramFilter</filter-name>
+        <filter-class>segurl.filter.SegurlURLInjectorFilter</filter-class>
+        <init-param>
+            <param-name>viewId</param-name>
+            <param-value>/program/index.xhtml</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>ProgramFilter</filter-name>
+        <url-pattern>/program/*</url-pattern>
+    </filter-mapping>
 </web-app>
